# bitcoin-scripting

./: .gitignore  CHANGELOG.md  LICENSE  README.md  bitcoin-scripting.cabal  fourmolu.yaml  hie.yaml
.github/workflows/: haskell-test.yaml
src/Language/Bitcoin/: Miniscript.hs  Policy.hs  Utils.hs
src/Language/Bitcoin/Miniscript/: Compiler.hs  Fragments.hs  Parser.hs  Syntax.hs  Text.hs  Types.hs  Witness.hs
src/Language/Bitcoin/Policy/: Parser.hs  Syntax.hs  Text.hs
src/Language/Bitcoin/Script/: Descriptors.hs  Utils.hs
src/Language/Bitcoin/Script/Descriptors/: Checksum.hs  Parser.hs  Syntax.hs  Text.hs  Utils.hs
test/: Main.hs
test/Test/: Descriptors.hs  Example.hs  Miniscript.hs  Utils.hs
test/Test/Descriptors/: Utils.hs
test/Test/Miniscript/: Compiler.hs  Examples.hs  Types.hs  Witness.hs
